objects/APTS_ERP_Order_Header_Data__c.object
<CustomObject>
    <description>Object to hold header data provided by ERP systems</description>
    <fields>
        <fullName>APTS_AUART__c</fullName>
        <description>Sales Document Type</description>
        <label>Sales Document Type</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_BALID__c</fullName>
        <description>Internal Reference</description>
        <externalId>true</externalId>
        <label>Internal Reference</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_BNAME__c</fullName>
        <description>Name of orderer</description>
        <label>Name of orderer</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_BOLNR__c</fullName>
        <description>Bill of lading</description>
        <label>Bill of lading</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_BSTDK__c</fullName>
        <description>Customer Purchase Order Number</description>
        <label>Customer Purchase Order Number</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_BSTKD__c</fullName>
        <description>Customer Purchase Order Date</description>
        <label>Customer Purchase Order Date</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_DELETE__c</fullName>
        <description>Deletion Flag, delete item from Apttus</description>
        <label>Deletion Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_DOCNUM__c</fullName>
        <description>IDoc Number</description>
        <label>IDoc Number</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ERPID__c</fullName>
        <label>ERPID</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_FKART__c</fullName>
        <description>Billing Type</description>
        <label>Billing Type</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_FKDAT__c</fullName>
        <description>Billing Date</description>
        <label>Billing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_GUID__c</fullName>
        <label>GUID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Header_Key__c</fullName>
        <formula>APTS_ERPID__c + APTS_VBELN__c + APTS_DOCNUM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Header Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Is_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Processed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_KUNNR__c</fullName>
        <description>Sold to Party</description>
        <label>Sold to Party</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LFART__c</fullName>
        <description>Delivery Type</description>
        <label>Delivery Type</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_SPART__c</fullName>
        <description>Division</description>
        <label>Division</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_STAWE__c</fullName>
        <description>Statistics Currency</description>
        <label>Statistics Currency</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_VBELN__c</fullName>
        <description>Subsequent sales and distribution document</description>
        <label>SAP Document</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_VBTYP__c</fullName>
        <description>Document category of subsequent document</description>
        <label>SAP Document category</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_VKBUR__c</fullName>
        <description>Sales Office</description>
        <label>Sales Office</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_VKGRP__c</fullName>
        <description>Sales Group</description>
        <label>Sales Group</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_VKORG__c</fullName>
        <description>Sales Organisation</description>
        <label>Sales Organisation</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_VSART__c</fullName>
        <description>Shipping Type</description>
        <label>Shipping Type</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_VSBED__c</fullName>
        <description>Shipping Conditions</description>
        <label>Shipping Conditions</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_VSTEL__c</fullName>
        <description>Shipping Point</description>
        <label>Shipping Point</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_VTWEG__c</fullName>
        <description>Distribution Channel</description>
        <label>Distribution Channel</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_WADAT_IST__c</fullName>
        <description>Actual Goods Movement Date</description>
        <label>Actual Goods Movement Date</label>
        <type>Date</type>
    </fields>
    <label>ERP Order Header Data</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>APTS_ERPID__c</columns>
        <columns>APTS_VBELN__c</columns>
        <columns>APTS_DOCNUM__c</columns>
        <columns>APTS_BALID__c</columns>
        <columns>APTS_Is_Processed__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ERP-ORDER-HEADER-{000000}</displayFormat>
        <label>ERP Order Header Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ERP Order Header Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>